@@ -1,8 +1,8 @@
 Package: TunePareto
 Type: Package
 Title: Multi-objective parameter tuning for classifiers
-Version: 2.3
-Date: 2013-08-09
+Version: 2.4
+Date: 2014-03-12
 Author: Christoph Müssel, Ludwig Lausser, Hans Kestler
 Maintainer: Hans Kestler <hans.kestler@uni-ulm.de>
 Description: Generic methods for parameter tuning of classification algorithms using multiple scoring functions
@@ -11,7 +11,7 @@ Suggests: snowfall, desire, igraph, gsl, class, tree, e1071,
 License: GPL-2
 LazyLoad: yes
 Encoding: UTF-8
-Packaged: 2013-08-09 20:27:19 UTC; muessel
+Packaged: 2014-03-12 10:09:51 UTC; muessel
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-08-10 01:06:42
+Date/Publication: 2014-03-30 21:50:28
